--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^7.0.2"
+    "mongoose": "^7.0.2",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.21"
