--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,9 +11,9 @@ services:
     ports:
       - "3000:3000"
     # Mapping the client directory on the host machine to the /app directory on the container.
-    volumes:
-      - ./client:/app
-      - ./client/node_modules:/app/node_modules
+    # volumes:
+    # - ./client:/app
+    # - ./client/node_modules:/app/node_modules
     # Allows you to run container in detached mode.
     stdin_open: true
     tty: true
@@ -23,6 +23,6 @@ services:
     container_name: booktalks-server
     ports:
       - "5000:5000"
-    volumes:
-      - ./server:/app
-      - ./server/node_modules:/app/node_modules
+    # volumes:
+    # - ./server:/app
+    # - ./server/node_modules:/app/node_modules
