--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "date-fns": "^2.30.0",
     "lucide-react": "^0.244.0",
     "react": "^18.2.0",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.9.0",
